mobile overflow fix

--- a/src/components/ui/Notification/Notification.scss
+++ b/src/components/ui/Notification/Notification.scss
@@ -61,7 +61,7 @@
       right: -300px;
     }
     &-done {
-      right: 10px;
+      right: 310px;
     }
   }
 }
